# ai-swarm-framework

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.zh-TW.md  ai_framework.py  bootstrap_agent.py  clean_inbox.py  inject_v2.py  pyproject.toml  requirements.txt  run.bat  run.sh  swarm_check.py  swarm_create_handoff.py  swarm_create_task.py  sync_watchdog.py
docs/: architecture.md  cross_platform_shared_folder.md  hermes_integration.md
examples/: four_agents.example.json
swarm/: README.md
swarm/templates/: handoff.json  task.json
templates/: AGENTS.md  CORE.md  project.md  skill.md
