[project]
name = "ai-swarm-framework"
version = "0.1.0"
description = "Local-first, file-based task and handoff protocol for multi-machine AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Sean Design Studio" }
]
dependencies = [
  "pyyaml",
  "watchdog",
  "pyperclip"
]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/ai-swarm-framework"
Issues = "https://github.com/YOUR_USERNAME/ai-swarm-framework/issues"

[tool.ruff]
line-length = 100
